<?xml version="1.0" encoding="utf-8"?>
<!--
Name: Nsibande Lethukuthula
Student Number: 2018227377
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextureView
        android:id="@+id/textureViewCamera"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#2a9df4"
            android:text="@string/txt_btn_take_photo"
            android:textColor="@color/white"
            android:layout_marginEnd="5dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#2a9df4"
            android:text="@string/txt_btn_open_gallery"
            android:textColor="@color/white"
            android:layout_marginStart="5dp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCustomers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_open_sql_activity"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>